--- a/gallery.html
+++ b/gallery.html
@@ -30,59 +30,49 @@
 
   <script type="module" src="./assets/js/common.js"></script>
   <script>
-    const exts = ['jpg','jpeg','png','JPG','JPEG','PNG'];
-    const maxIndex = 200;
-    const folders = { grit:'학원', study:'공부', event:'행사' };
-
-    async function fileExists(u){ try{ const r=await fetch(u,{method:'HEAD'}); return r.ok; }catch{ return false; } }
-    async function listFiles(folder){
-      const base = `./assets/gallery/${folder}/${folder}`;
-      const arr = [];
-      for(let i=1;i<=maxIndex;i++){
-        for(const ext of exts){
-          const u = `${base}${i}.${ext}`;
-          if(await fileExists(u)){ arr.push(u); break; }
-        }
-      }
-      return arr;
-    }
+    const LABELS = { grit:'학원', study:'공부', event:'행사' };
 
     async function loadGallery(){
       const grid = document.getElementById('galleryGrid');
-      const map = {};
-      for (const f of Object.keys(folders)) map[f] = await listFiles(f);
+      const bar  = document.querySelector('.grit-filter[data-for="gallery"]');
+      try{
+        const res = await fetch('./data/gallery.json'); const map = await res.json();
 
-      function paint(group='all'){
-        let imgs = [];
-        if(group==='all'){
-          imgs = Object.entries(map).flatMap(([k,arr])=>arr.map(u=>({u, k})));
-        }else{
-          imgs = map[group].map(u=>({u, k:group}));
+        function paint(group='all'){
+          let items=[];
+          if(group==='all'){
+            items = Object.entries(map).flatMap(([k,arr])=>arr.map(u=>({u, k})));
+          }else{
+            items = (map[group]||[]).map(u=>({u, k:group}));
+          }
+          grid.innerHTML = items.map(({u,k})=>`
+            <figure class="gallery-thumb" data-group="${k}">
+              <img src="./${u}" alt="그릿에듀 ${LABELS[k]||''}" loading="lazy">
+            </figure>`).join('');
         }
-        grid.innerHTML = imgs.map(({u,k})=>`
-          <figure class="gallery-thumb" data-group="${k}">
-            <img src="${u}" alt="그릿에듀 ${folders[k]}" />
-          </figure>`).join('');
+
+        paint();
+
+        bar.addEventListener('click', e=>{
+          const btn = e.target.closest('button[data-group]');
+          if(!btn) return;
+          bar.querySelectorAll('button').forEach(b=>b.classList.remove('on'));
+          btn.classList.add('on');
+          paint(btn.dataset.group);
+        });
+
+        // 라이트박스
+        const lb = document.getElementById('lightbox');
+        const lbImg = document.getElementById('lightboxImg');
+        grid.addEventListener('click', e=>{
+          const img = e.target.closest('img'); if(!img) return;
+          lbImg.src = img.src; lb.setAttribute('aria-hidden','false');
+        });
+        document.addEventListener('click', e=>{ if(e.target.dataset.close) lb.setAttribute('aria-hidden','true'); });
+        document.addEventListener('keydown', e=>{ if(e.key==='Escape') lb.setAttribute('aria-hidden','true'); });
+      }catch(e){
+        grid.innerHTML = '<p>갤러리를 불러오지 못했습니다.</p>';
       }
-      paint();
-
-      const bar = document.querySelector('.grit-filter[data-for="gallery"]');
-      bar.addEventListener('click', e=>{
-        const btn = e.target.closest('button[data-group]'); if(!btn) return;
-        bar.querySelectorAll('button').forEach(b=>b.classList.remove('on'));
-        btn.classList.add('on');
-        paint(btn.dataset.group);
-      });
-
-      // 라이트박스
-      const lb = document.getElementById('lightbox');
-      const lbImg = document.getElementById('lightboxImg');
-      grid.addEventListener('click', e=>{
-        const img = e.target.closest('img'); if(!img) return;
-        lbImg.src = img.src; lb.setAttribute('aria-hidden','false');
-      });
-      document.addEventListener('click', e=>{ if(e.target.dataset.close) lb.setAttribute('aria-hidden','true'); });
-      document.addEventListener('keydown', e=>{ if(e.key==='Escape') lb.setAttribute('aria-hidden','true'); });
     }
     document.addEventListener('DOMContentLoaded', loadGallery);
   </script>
