feat(ui): footer icon uniformity, instructor design polish, posters added, CEJ consulting profile, story highlight, mobile responsive nav

--- a/instructor.html
+++ b/instructor.html
@@ -24,26 +24,30 @@
       if(me.id==='math_yhs' && !me.youtube_id){ me.youtube_id = '6aPYStft9Xo'; }
 
       wrap.innerHTML = `
-      <section class="grit-profile" style="display:grid;grid-template-columns:320px 1fr;gap:28px;align-items:start">
+      <section class="grit-profile" style="display:grid;grid-template-columns:320px 1fr;gap:32px;align-items:start;border-top:2px solid #ff7a00;padding-top:24px;">
         <div>
           <img class="profile-photo" src="${me.photo}" alt="${me.name}">
         </div>
         <div>
-          <h1 style="margin:0 0 6px">${me.name}</h1>
-          <p style="margin:0 0 12px;color:#666">${me.subject||''}</p>
-          <div style="line-height:1.7">${(me.bio||'').replace(/\n/g,'<br>')}</div>
+          <h1 style="margin:0 0 8px;font-size:1.8rem">${me.name}</h1>
+          <p style="margin:0 0 16px;color:#ff7a00;font-weight:500">${me.subject||''}</p>
+          <hr style="border:none;border-top:1px solid #eee;margin:16px 0">
+          <div style="line-height:1.7;color:#444">${(me.bio||'').replace(/\n/g,'<br>')}</div>
 
-          ${me.books ? `<h3 style="margin:24px 0 8px">교재</h3><div>${me.books.replace(/\n/g,'<br>')}</div>` : ''}
+          ${me.books ? `<h3 style="margin:24px 0 8px;color:#333;border-left:4px solid #ff7a00;padding-left:8px;">교재</h3><div>${me.books.replace(/\n/g,'<br>')}</div>` : ''}
 
           ${me.youtube_id ? `
-            <h3 style="margin:24px 0 8px">맛보기 강좌</h3>
-            <div style="aspect-ratio:16/9;max-width:720px;border-radius:12px;overflow:hidden;border:1px solid #eee">
+            <h3 style="margin:24px 0 8px;color:#333;border-left:4px solid #ff7a00;padding-left:8px;">맛보기 강좌</h3>
+            <div style="aspect-ratio:16/9;max-width:720px;border-radius:12px;overflow:hidden;border:1px solid #eee;box-shadow:0 6px 20px rgba(0,0,0,.1)">
               <iframe width="100%" height="100%" src="https://www.youtube.com/embed/${me.youtube_id}" 
                 title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                 gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>` : ''}
 
-          ${me.poster?`<h3 style="margin:24px 0 8px">포스터</h3><img src="${me.poster}" alt="포스터" style="max-width:420px;width:100%;border-radius:12px;border:1px solid #eee">`:''}
+          ${me.poster?`
+            <h3 style="margin:24px 0 8px;color:#333;border-left:4px solid #ff7a00;padding-left:8px;">포스터</h3>
+            <img src="${me.poster}" alt="포스터" style="max-width:480px;width:100%;border-radius:12px;border:1px solid #eee;box-shadow:0 6px 20px rgba(0,0,0,.08)">
+          `:''}
         </div>
       </section>`;
     }
