--- a/story.html
+++ b/story.html
@@ -12,6 +12,18 @@
     <h1>그릿에듀 이야기</h1>
     <p>그릿에듀는 <b>교육의 새로운 표준</b>을 만들어가는 학원형 EdTech 브랜드입니다.</p>
     <p>2025년, "도전과 끈기(GRIT)"를 모토로, 과목별 전문 강사진과 함께 학생 개개인에게 최적화된 학습 경험을 제공합니다.</p>
+
+    <section class="grit-story-highlight" style="text-align:center;margin:64px 0;">
+      <img src="./assets/story/story2.png" alt="그릿에듀 소개" style="max-width:900px;width:100%;border-radius:12px;margin-bottom:20px;">
+      <div style="font-weight:600;font-size:1.1rem;line-height:1.8">
+        공부는 단순한 지식의 싸움이 아닙니다.<br>
+        노력과 꾸준함, 멘탈과 태도, 정서와 습관까지 함께 자라야<br>
+        <mark style="background:yellow;color:#000">진짜 성적, 그리고 진짜 성장이 따라옵니다.</mark><br><br>
+        <span style="color:#ff6655;font-weight:700;">그릿에듀는 단순한 학원이 아닙니다.</span><br>
+        국내 최고 수준의 강사진과 함께<br>
+        학생의 '심리적 성장'과 '학습 지속력'을 동시에 키워내는 전문 교육 시스템을 운영합니다.
+      </div>
+    </section>
   </main>
 
   <script type="module" src="./assets/js/common.js"></script>
