--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,12 @@
     <p>통화 가능 시간 : 평일 3~10pm / 주말 12~10pm</p>
     <p class="grit-contact-phone">☏ 02-809-0611</p>
     <div class="grit-map">
-      <iframe src="https://www.google.com/maps?q=서울%20금천구%20시흥대로47길%2028-5&output=embed" width="100%" height="320" style="border:0;border-radius:12px"></iframe>
+      <iframe class="embed-16x9" src="https://www.google.com/maps?q=%EC%84%9C%EC%9A%B8%20%EA%B8%88%EC%B2%9C%EA%B5%AC%20%EC%8B%9C%ED%9D%A5%EB%8C%80%EB%A1%9C47%EA%B8%B8%2028-5&output=embed"
+        style="width:100%;border:0;border-radius:12px"></iframe>
     </div>
-    <div class="grit-contact-links">
-      <a href="https://map.naver.com/v5/search/그릿에듀학원" target="_blank" class="grit-btn">네이버 지도</a>
-      <a href="https://map.kakao.com/link/search/그릿에듀학원" target="_blank" class="grit-btn">카카오 지도</a>
+    <div class="grit-cta-row" style="margin-top:14px">
+      <a class="grit-btn" href="https://map.naver.com/p/entry/place/1676359577" target="_blank" rel="noopener">네이버 지도</a>
+      <a class="grit-btn" href="https://map.kakao.com/link/map/그릿에듀학원,37.457565,126.900318" target="_blank" rel="noopener">카카오 지도</a>
       <a class="grit-btn" href="https://maps.app.goo.gl/s24PTXWa5A27BZ5L8" target="_blank" rel="noopener">구글 지도</a>
     </div>
   </main>
