--- a/instructors.html
+++ b/instructors.html
@@ -50,7 +50,7 @@
     async function renderInstructorsPage(){
       const res = await fetch('./data/instructors.json');
       const data = await res.json();
-      const all = data.filter(x=>x.subject!=='컨설팅');
+      const all = data;   // 컨설팅 포함
       const grid = document.getElementById('instructorGrid');
       const bar  = document.querySelector('.grit-filter[data-for="instructors"]');
       function paint(subject='all'){
