--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,17 @@
   <script type="module" src="./assets/js/common.js"></script>
 </head>
 <body>
+<nav class="navbar">
+  <a href="./index.html">그릿에듀</a>
+  <a href="./story.html">이야기</a>
+  <a href="./instructors.html">강사진</a>
+  <a href="./gallery.html">갤러리</a>
+  <a href="./contact.html">문의</a>
+  <a href="./members/dashboard.html" id="menu-myclass" style="display:none;">내 강의실</a>
+  <a href="./login.html" id="menu-login">로그인</a>
+  <a href="#" id="menu-logout" style="display:none;">로그아웃</a>
+</nav>
+
   <main class="grit-section">
     <h2>상담 예약</h2>
     <p>전화로 미리 상담 시간 예약 후 방문하여 상담 가능합니다.</p>
