--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <link rel="stylesheet" href="./assets/css/main.css" />
 </head>
 <body>
+<nav class="navbar">
+  <a href="./index.html">그릿에듀</a>
+  <a href="./story.html">이야기</a>
+  <a href="./instructors.html">강사진</a>
+  <a href="./gallery.html">갤러리</a>
+  <a href="./contact.html">문의</a>
+  <a href="./members/dashboard.html" id="menu-myclass" style="display:none;">내 강의실</a>
+  <a href="./login.html" id="menu-login">로그인</a>
+  <a href="#" id="menu-logout" style="display:none;">로그아웃</a>
+</nav>
 
 <main>
   <section class="grit-hero">
