refactor: fix header duplication and implement proper login-based navigation
- Remove duplicate headers from all HTML pages
- Implement centralized header/footer injection via common.js
- Add Firebase session persistence (browserSessionPersistence)
- Fix navigation menu based on login state:
  - Not logged in: 洹몃┸?먮? / ?댁빞湲?/ 媛뺤궗吏?/ 媛ㅻ윭由?/ 臾몄쓽 / 濡쒓렇??  - Logged in: 洹몃┸?먮? / ?댁빞湲?/ 媛뺤궗吏?/ 媛ㅻ윭由?/ 臾몄쓽 / ??媛뺤쓽??/ 濡쒓렇?꾩썐
- Update all script paths to use absolute paths (/assets/js/)
- Add proper menu toggle functionality
- Session expires when browser tab/window is closed

--- a/instructor.html
+++ b/instructor.html
@@ -11,7 +11,7 @@
   <main class="grit-section" style="max-width:1080px;margin:0 auto;padding:16px">
     <div id="profile"></div>
   </main>
-  <script type="module" src="./assets/js/common.js"></script>
+  <script type="module" src="/assets/js/common.js"></script>
   <script>
     async function loadProfile(){
       const p = new URLSearchParams(location.search).get('id');
