--- a/gallery.html
+++ b/gallery.html
@@ -8,17 +8,6 @@
   <title>그릿에듀 | 갤러리</title>
 </head>
 <body>
-<nav class="navbar">
-  <a href="./index.html">그릿에듀</a>
-  <a href="./story.html">이야기</a>
-  <a href="./instructors.html">강사진</a>
-  <a href="./gallery.html">갤러리</a>
-  <a href="./contact.html">문의</a>
-  <a href="./members/dashboard.html" id="menu-myclass" style="display:none;">내 강의실</a>
-  <a href="./login.html" id="menu-login">로그인</a>
-  <a href="#" id="menu-logout" style="display:none;">로그아웃</a>
-</nav>
-
   <main class="grit-section">
     <h1>갤러리</h1>
     <div class="grit-filter" data-for="gallery">
@@ -39,7 +28,7 @@
     </div>
   </div>
 
-  <script type="module" src="./assets/js/common.js"></script>
+  <script type="module" src="/assets/js/common.js"></script>
   <script>
     const LABELS = { grit:'학원', study:'공부', event:'행사' };
 
