--- a/story.html
+++ b/story.html
@@ -103,6 +103,6 @@
     </section>
 
   </main>
-  <script type="module" src="/assets/js/common.js"></script>
+  <script type="module" src="./assets/js/common.js"></script>
 </body>
 </html>
