feat: enhance UI/UX with bold navigation, login redesign, and dashboard cards
- Make all navigation menu items bold with underline for active/hover states
- Add preload skeleton headers to prevent FOUC (Flash of Unstyled Content)
- Redesign login page with centered card UI maintaining brand consistency
- Change login redirect to home page instead of direct dashboard access
- Add personal info card and course checklist to dashboard with consistent design
- Implement Firestore integration for course progress tracking
- Enhance visual consistency across all pages with improved card layouts

--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,7 @@
   <title>그릿에듀 | 갤러리</title>
 </head>
 <body>
+<header class="grit-header grit-preload"></header>
   <main class="grit-section">
     <h1>갤러리</h1>
     <div class="grit-filter" data-for="gallery">
