--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./assets/css/main.css" />
 </head>
 <body>
+<header class="grit-header grit-preload"></header>
 <main>
   <section class="grit-hero">
     <img src="./assets/banner_main.png" alt="그릿에듀 배너">
