--- a/instructor.html
+++ b/instructor.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
+<header class="grit-header grit-preload"></header>
   <main class="grit-section" style="max-width:1080px;margin:0 auto;padding:16px">
     <div id="profile"></div>
   </main>
