--- a/instructors.html
+++ b/instructors.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
+<header class="grit-header grit-preload"></header>
   <main class="container">
     <h1>그릿에듀 강사진</h1>
     <div class="grit-filter" role="tablist" aria-label="강사진 필터" data-for="instructors">
