--- a/login.html
+++ b/login.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>로그인 - GritEdu LMS</title>
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css" />
+  <script type="module" src="/assets/js/common.js"></script>
 </head>
 <body>
-  <h1>로그인</h1>
-  <form id="login-form">
-    <input type="email" id="email" placeholder="이메일" required>
-    <input type="password" id="password" placeholder="비밀번호" required>
-    <button type="submit">로그인</button>
-  </form>
+  <div class="auth-wrap">
+    <div class="auth-card">
+      <h1>로그인</h1>
+      <p class="desc">그릿에듀 계정으로 로그인하세요. 로그인 후 상단 메뉴에 '내 강의실'이 표시됩니다.</p>
+
+      <form id="login-form">
+        <label for="email">이메일</label>
+        <input type="email" id="email" required placeholder="email@example.com" />
+
+        <label for="password">비밀번호</label>
+        <input type="password" id="password" required placeholder="********" />
+
+        <button type="submit" class="primary">로그인</button>
+      </form>
+    </div>
+  </div>
+
   <script type="module">
-    import { auth } from "./assets/js/firebase-init.js";
+    import { auth } from "/assets/js/firebase-init.js";
     import { signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js";
 
-    document.getElementById("login-form").addEventListener("submit", async (e) => {
+    const form = document.getElementById("login-form");
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      const email = document.getElementById("email").value;
+      const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value;
       try {
         await signInWithEmailAndPassword(auth, email, password);
-        location.href = "/members/dashboard.html";
-      } catch (error) {
-        alert("로그인 실패: " + error.message);
+        // ✅ 로그인 후 대시보드로 바로 이동하지 말고 메인으로
+        location.href = "/index.html";
+      } catch (err) {
+        alert("로그인 실패: " + (err?.message || err));
       }
     });
   </script>
