--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,10 @@
   <script type="module" src="/assets/js/common.js"></script>
 </head>
 <body>
+<header class="grit-header grit-preload"></header>
   <main class="grit-section">
     <h2>상담 예약</h2>
-    <p>전화로 미리 상담 시간 예약 후 방문하여 상담 가능합니다.</p>
+    <p>전화로 상담 시간 예약 후 방문하여 상담 가능합니다.</p>
     <p>통화 가능 시간 : 평일 3~10pm / 주말 12~10pm</p>
     <p class="grit-contact-phone">☏ 02-809-0611</p>
     <div class="grit-map">
@@ -20,8 +21,8 @@
       </div>
     </div>
     <div class="grit-cta-row" style="margin-top:14px">
-      <a class="grit-btn" href="https://map.naver.com/p/entry/place/1676359577" target="_blank" rel="noopener">네이버 지도</a>
-      <a class="grit-btn" href="https://map.kakao.com/link/map/그릿에듀학원,37.457565,126.900318" target="_blank" rel="noopener">카카오 지도</a>
+      <a class="grit-btn" href="https://map.naver.com/p/entry/place/1775828207?c=15.00,0,0,0,dh" target="_blank" rel="noopener">네이버 지도</a>
+      <a class="grit-btn" href="https://place.map.kakao.com/1537339636" target="_blank" rel="noopener">카카오 지도</a>
       <a class="grit-btn" href="https://maps.app.goo.gl/s24PTXWa5A27BZ5L8" target="_blank" rel="noopener">구글 지도</a>
     </div>
   </main>
