--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
   <div class="auth-wrap">
     <div class="auth-card">
       <h1>로그인</h1>
-      <p class="desc">그릿에듀 계정으로 로그인하세요. 로그인 후 상단 메뉴에 '내 강의실'이 표시됩니다.</p>
+      <p class="desc">그릿에듀 계정으로 로그인하세요.</p>
 
       <form id="login-form">
         <label for="email">이메일</label>
